Fixed project image margin on mobile

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,5 +1,6 @@
 .slider {
   width: -webkit-fill-available;
+  padding-bottom: 3rem;
 }
 
 .slick-dots li.slick-active button:before {
@@ -23,7 +24,7 @@
     bottom: 30px!important;
   }
   @media (min-height: 851px) and (max-height: 900px) {
-    bottom: 40px!important;
+    bottom: 50px!important;
   }
 }
 
